--- a/src/app/screens/acao/acao.component.html
+++ b/src/app/screens/acao/acao.component.html
@@ -3,14 +3,15 @@
   <h2>Ações</h2>
   <button class="btn btn-primary"><i class="pi pi-fw pi-plus" style="margin-right: 10px;"></i>Cadastrar nova ação</button>
 </div>
-<p-toast position="top-right"></p-toast>
+
 <p-table [value]="acoes" styleClass="p-datatable-striped">
   <ng-template pTemplate="header">
     <tr>
-      <th style="width: 100px; text-align: center;" align="center">Id</th>
+      <th style="width: 40px; text-align: center;" align="center">Id</th>
       <th style="text-align: center;">Nome</th>
       <th style="text-align: center;">Descrição</th>
       <th style="text-align: center;">Ativo</th>
+      <th></th>
       <th></th>
       <th></th>
     </tr>
@@ -20,9 +21,10 @@
       <td style="text-align: center;">{{acao.id}}</td>
       <td>{{acao.nome}}</td>
       <td>{{acao.descricao}}</td>
-      <td style="text-align: center;"><button [ngClass]="acao.ativo == true ? 'btn btn-primary' : 'btn btn-danger'" (click)="onAtivoClicked(acao)">{{acao.ativo === true ? 'Sim': 'Não'}}</button></td>
-      <td style="text-align: center;"><button class="btn btn-info"><i class="pi pi-fw pi-refresh" style="margin-right: 10px;"></i>Executar</button></td>
-      <td style="text-align: center;"><button class="btn btn-danger"><i class="pi pi-fw pi-trash"></i></button></td>
+      <td style="text-align: center;"><button [ngClass]="acao.ativo == true ? 'btn btn-primary mr-2' : 'btn btn-danger mr-2'" (click)="onAtivoClicked(acao)" pTooltip="Ativar/Desativar ação" tooltipPosition="top">{{acao.ativo === true ? 'Sim': 'Não'}}</button></td>
+      <td style="text-align: center;"><button class="btn btn-secondary mr-2" (click)="onEdicaoClicked(acao)" pTooltip="Editar" tooltipPosition="top"><i class="pi pi-fw pi-pencil"></i></button></td>
+      <td style="text-align: center;"><button class="btn btn-link mr-2" pTooltip="Executar ação" tooltipPosition="top"><i class="pi pi-fw pi-refresh" style="margin-right: 10px;"></i>Executar</button></td>
+      <td style="text-align: center;"><button class="btn btn-warning mr-2" pTooltip="Deletar ação" tooltipPosition="top"><i class="pi pi-fw pi-trash"></i></button></td>
     </tr>
   </ng-template>
 </p-table>
@@ -38,6 +40,49 @@
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-success" (click)="c('Save click')"><i class="pi pi-check-square" style="margin-right: 10px;"></i>Ativar ação</button>
-    <button type="button" class="btn btn-danger" (click)="c('Cancel click')"><i class="pi pi-check-square" style="margin-right: 10px;"></i>Cancelar</button>
+    <button type="button" class="btn btn-danger" (click)="c('Cancel click')"><i class="pi pi-times" style="margin-right: 10px;"></i>Cancelar</button>
+  </div>
+</ng-template>
+<ng-template #modalForm let-c="close">
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Editar ação</h4>
+    <button type="button" class="close" aria-label="Close" (click)="c('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <form>
+      <div class="form-group">
+        <label>Id:</label>
+        <div class="input-group mb-3">
+          <div class="input-group-prepend">
+            <span class="input-group-text" id="basic-addon1"><i class="pi pi-tag"></i></span>
+          </div>
+          <input type="text" id="id" name="id" [(ngModel)]="acao.id" class="form-control" placeholder="Nome da ação" [disabled]="editMode" aria-label="acao" aria-describedby="basic-addon1">
+        </div>
+        <label>Nome:</label>
+        <div class="input-group mb-3">
+          <div class="input-group-prepend">
+            <span class="input-group-text" id="basic-addon1"><i class="pi pi-bookmark"></i></span>
+          </div>
+          <input type="text" id="nome" name="nome" [(ngModel)]="acao.nome" class="form-control" placeholder="Nome da ação" aria-label="acao" aria-describedby="basic-addon1">
+        </div>
+        <label>Descrição:</label>
+        <div class="input-group">
+          <div class="input-group-prepend">
+            <span class="input-group-text"><i class="pi pi-file-o"></i></span>
+          </div>
+          <textarea class="form-control"name="descricao" id="descricao" [(ngModel)]="acao.descricao" aria-label="With textarea"></textarea>
+        </div>
+        <label style="margin-top: 20px">Ativo:</label>
+        <div class="input-group">
+          <p-inputSwitch [(ngModel)]="acao.ativo" name="ativo"></p-inputSwitch>
+        </div>
+      </div>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-success" (click)="c('Save click')"><i class="pi pi-check-square" style="margin-right: 10px;"></i>Salvar edição</button>
+    <button type="button" class="btn btn-danger" (click)="c('Cancel click')"><i class="pi pi-times" style="margin-right: 10px;"></i>Cancelar</button>
   </div>
 </ng-template>
