--- a/src/app/screens/acao/acao.component.html
+++ b/src/app/screens/acao/acao.component.html
@@ -1,10 +1,10 @@
 
 <div class="table-header">
   <h2>Ações</h2>
-  <button class="btn btn-primary"><i class="pi pi-fw pi-plus" style="margin-right: 10px;"></i>Cadastrar nova ação</button>
+  <button class="btn btn-primary" (click)="onCadastroClicked()"><i class="pi pi-fw pi-plus" style="margin-right: 10px;"></i>Cadastrar nova ação</button>
 </div>
 
-<p-table [value]="acoes" styleClass="p-datatable-striped">
+<p-table #dataTable [value]="acoes" styleClass="p-datatable-striped">
   <ng-template pTemplate="header">
     <tr>
       <th style="width: 40px; text-align: center;" align="center">Id</th>
@@ -30,20 +30,20 @@
 </p-table>
 <ng-template #modalConfirmacao let-c="close">
   <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">Ativar ação</h4>
+    <h4 class="modal-title" id="modal-basic-title">{{ acao.ativo === false ? 'Ativar' : 'Desativar'}} ação</h4>
     <button type="button" class="close" aria-label="Close" (click)="c('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
   <div class="modal-body">
-    <p>Deseja mesmo ativar esta ação?</p>
+    <p>Deseja mesmo {{ acao.ativo === false ? 'ativar' : 'desativar'}} esta ação?</p>
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-success" (click)="c('Save click')"><i class="pi pi-check-square" style="margin-right: 10px;"></i>Ativar ação</button>
     <button type="button" class="btn btn-danger" (click)="c('Cancel click')"><i class="pi pi-times" style="margin-right: 10px;"></i>Cancelar</button>
   </div>
 </ng-template>
-<ng-template #modalForm let-c="close">
+<ng-template #modalEdicao let-c="close">
   <div class="modal-header">
     <h4 class="modal-title" id="modal-basic-title">Editar ação</h4>
     <button type="button" class="close" aria-label="Close" (click)="c('Cross click')">
@@ -83,6 +83,42 @@
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-success" (click)="c('Save click')"><i class="pi pi-check-square" style="margin-right: 10px;"></i>Salvar edição</button>
+    <button type="button" class="btn btn-danger" (click)="c('Cancel click')"><i class="pi pi-times" style="margin-right: 10px;"></i>Cancelar</button>
+  </div>
+</ng-template>
+<ng-template #modalCadastro let-c="close">
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Editar ação</h4>
+    <button type="button" class="close" aria-label="Close" (click)="c('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <form>
+      <div class="form-group">
+        <label>Nome:</label>
+        <div class="input-group mb-3">
+          <div class="input-group-prepend">
+            <span class="input-group-text" id="basic-addon1"><i class="pi pi-bookmark"></i></span>
+          </div>
+          <input type="text" id="nome" name="nome" [(ngModel)]="acao.nome" class="form-control" placeholder="Nome da ação" aria-label="acao" aria-describedby="basic-addon1">
+        </div>
+        <label>Descrição:</label>
+        <div class="input-group">
+          <div class="input-group-prepend">
+            <span class="input-group-text"><i class="pi pi-file-o"></i></span>
+          </div>
+          <textarea class="form-control"name="descricao" id="descricao" [(ngModel)]="acao.descricao" aria-label="With textarea"></textarea>
+        </div>
+        <label style="margin-top: 20px">Ativo:</label>
+        <div class="input-group">
+          <p-inputSwitch [(ngModel)]="acao.ativo" name="ativo"></p-inputSwitch>
+        </div>
+      </div>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-success" (click)="c('Save click')"><i class="pi pi-check-square" style="margin-right: 10px;"></i>Salvar nova ação</button>
     <button type="button" class="btn btn-danger" (click)="c('Cancel click')"><i class="pi pi-times" style="margin-right: 10px;"></i>Cancelar</button>
   </div>
 </ng-template>
