--- a/src/app/screens/menu/menu.component.html
+++ b/src/app/screens/menu/menu.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-xl">
   <p-tabMenu [model]="itens"></p-tabMenu>
   <router-outlet></router-outlet>
 </div>
