--- a/src/app/screens/acao/acao.component.html
+++ b/src/app/screens/acao/acao.component.html
@@ -23,7 +23,7 @@
       <td>{{acao.descricao}}</td>
       <td style="text-align: center;"><button [ngClass]="acao.ativo == true ? 'btn btn-primary mr-2' : 'btn btn-danger mr-2'" (click)="onAtivoClicked(acao)" pTooltip="Ativar/Desativar ação" tooltipPosition="top">{{acao.ativo === true ? 'Sim': 'Não'}}</button></td>
       <td style="text-align: center;"><button class="btn btn-secondary mr-2" (click)="onEdicaoClicked(acao)" pTooltip="Editar" tooltipPosition="top"><i class="pi pi-fw pi-pencil"></i></button></td>
-      <td style="text-align: center;"><button class="btn btn-link mr-2" pTooltip="Executar ação" tooltipPosition="top"><i class="pi pi-fw pi-refresh" style="margin-right: 10px;"></i>Executar</button></td>
+      <td style="text-align: center;"><button class="btn btn-link mr-2" (click)="onExecutarAcaoClicked(acao)" pTooltip="Executar ação" tooltipPosition="top"><i class="pi pi-fw pi-refresh" style="margin-right: 10px;"></i>Executar</button></td>
       <td style="text-align: center;"><button class="btn btn-warning mr-2" (click)="onRemocaoClicked(acao) "pTooltip="Deletar ação" tooltipPosition="top"><i class="pi pi-fw pi-trash"></i></button></td>
     </tr>
   </ng-template>
@@ -41,6 +41,22 @@
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-success" (click)="c('Save click')"><i class="pi pi-check-square" style="margin-right: 10px;"></i>{{ acao.ativo === false ? 'Ativar' : 'Desativar'}} ação</button>
+    <button type="button" class="btn btn-danger" (click)="c('Cancel click')"><i class="pi pi-times" style="margin-right: 10px;"></i>Cancelar</button>
+  </div>
+</ng-template>
+
+<ng-template #modalExecucao let-c="close">
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Executar ação</h4>
+    <button type="button" class="close" aria-label="Close" (click)="c('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <p>Deseja mesmo executar a ação de {{acao.nome}} <strong>agora</strong>?</p>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-success" (click)="c('Save click')"><i class="pi pi-check-square" style="margin-right: 10px;"></i>Executar ação</button>
     <button type="button" class="btn btn-danger" (click)="c('Cancel click')"><i class="pi pi-times" style="margin-right: 10px;"></i>Cancelar</button>
   </div>
 </ng-template>
