Executions screen added.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,10 @@
-<p-toast position="top-right"></p-toast>
-<router-outlet></router-outlet>
+<div class="wrapper">
+  <header>
+    <div class="inner-header">
+      <h1 style="color: white; font-size: 26px">Babysitter UI</h1>
+      <img src="../assets/github.png" height="35" />
+    </div>
+  </header>
+  <p-toast position="top-right"></p-toast>
+  <router-outlet></router-outlet>
+</div>
