--- a/src/app/screens/acao/acao.component.css
+++ b/src/app/screens/acao/acao.component.css
@@ -6,3 +6,10 @@
   justify-content: space-between;
   align-items: center;
 }
+.loader {
+  width: 100%;
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
