--- a/src/app/screens/acao/acao.component.html
+++ b/src/app/screens/acao/acao.component.html
@@ -4,7 +4,7 @@
   <button class="btn btn-primary" (click)="onCadastroClicked()"><i class="pi pi-fw pi-plus" style="margin-right: 10px;"></i>Cadastrar nova ação</button>
 </div>
 
-<p-table #dataTable [(value)]="acoes" styleClass="p-datatable-striped">
+<p-table #dataTable *ngIf="!loading" [(value)]="acoes" styleClass="p-datatable-striped">
   <ng-template pTemplate="header">
     <tr>
       <th style="width: 40px; text-align: center;" align="center">Id</th>
@@ -28,6 +28,9 @@
     </tr>
   </ng-template>
 </p-table>
+<div class="loader">
+  <p-progressBar *ngIf="loading" mode="indeterminate"></p-progressBar>
+</div>
 <div style="margin-bottom: 100px;"></div>
 
 <ng-template #modalConfirmacao let-c="close">
