--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,8 @@
       <img src="../assets/github.png" height="35" />
     </div>
   </header>
-  <p-toast position="top-right"></p-toast>
-  <router-outlet></router-outlet>
+  <div class="container">
+    <p-toast position="top-right"></p-toast>
+    <router-outlet></router-outlet>
+  </div>
 </div>
