--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <header>
     <div class="inner-header">
       <h1 style="color: white; font-size: 26px">Babysitter UI</h1>
-      <img src="../assets/github.png" height="35" />
+      <a href="https://github.com/viniciusmfelix/fiap-babysitter-ui" target="_blank"><img src="../assets/github.png" height="35" /></a>
     </div>
   </header>
   <div class="container">
